# uncomment

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  README.md  Taskfile.yaml  _typos.toml  ai-rulez.yaml  deny.toml  install.sh  poly.toml  readme.md  test-distribution.sh  test_javascript.js  test_python.py  test_python_with_types.py  test_typescript.d.ts
.ai-rulez/: .generated-manifest.json  config.toml  config.yaml
.ai-rulez/commands/: build.md  fix.md  lint.md  review.md  test.md
.ai-rulez/context/: architecture.md  development-setup.md  poly.md
.ai-rulez/rules/: configuration-system.md  cross-platform-distribution.md  grammar-management.md  preservation-rules.md  tree-sitter-ast-parsing.md  version-synchronization.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  ci.yml  claude.yml  publish.yaml  publish.yml  release-homebrew.yml  release.yaml  release.yml
bench/: mod.rs
benches/: performance.rs
examples/: README.md  builtin_languages.toml  custom_languages.toml  quickstart_custom_languages.toml
fixtures/languages/: Dockerfile  regex_test.ts  test.c  test.cjs  test.clj  test.cpp  test.cs  test.css  test.cts  test.d.mts  test.d.ts  test.dart  test.elm  test.erl  test.ex  test.f90  test.fish  test.go  test.groovy  test.hcl  test.hs  test.html  test.ini  test.java  test.jl  test.json  test.jsonc  test.jsx  test.kt  test.lua  test.mjs  test.mk  test.ml  test.mts  test.nix  test.php  test.pl  test.proto  test.ps1  test.py  (+17 more)
fixtures/repos/: repos.yaml
npm-package/: .npmignore  README.md  index.js  install.js  package.json
pip-package/: README.md  pyproject.toml
pip-package/uncomment/: __init__.py  downloader.py
scripts/: test-homebrew-formula.sh  update-homebrew-formula.sh
src/: cli.rs  config.rs  lib.rs  main.rs  processor.rs  ui.rs
src/ast/: visitor.rs
src/grammar/: loader.rs  mod.rs
src/language/: definitions.rs  detection.rs  mod.rs  regex.rs
src/languages/: config.rs  handlers.rs  mod.rs  registry.rs
src/models/: language.rs  line_segment.rs  mod.rs  options.rs
src/output/: generator.rs
src/processing/: comment.rs  file.rs  line.rs  mod.rs
src/rules/: preservation.rs
src/tests/: gitignore_tests.rs
src/utils/: mod.rs  path.rs
test-data/: regex_test.ts  repos.yaml  test.cjs  test.d.mts  test.js  test.mjs  test.tsx
tests/: custom_languages_test.rs  error_handling_tests.rs  grammar_integration_tests.rs  init_command_tests.rs  init_integration_test.rs  integration_tests.rs  linting_directives_simple_test.rs  output_reporting_test.rs  python_docstring_test.rs  uncomment_integration.rs
