[package]
name = "uncomment"
version = "2.10.4"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
description = "A CLI tool to remove comments from code using tree-sitter for accurate parsing"
edition = "2024"
keywords = ["comments", "cli", "tree-sitter", "ast"]
license = "MIT"
repository = "https://github.com/Goldziher/uncomment"

[features]
default = []
bench-tools = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-elixir = "0.3.4"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.2"
tree-sitter-hcl = "1.1.0"
tree-sitter-make = "1.1.1"
tree-sitter-bash = "0.25.1"
tree-sitter-haskell = "0.23.1"
tree-sitter-loader = "0.26.3"
libloading = "0.9"
toml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3.3"
ignore = "0.4.25"
anyhow = "1.0.100"
once_cell = "1.21.3"
regex = "1.12.2"
walkdir = "2.5"
rayon = "1.11.0"
num_cpus = "1.17"
dirs = "6.0"
saphyr = "0.0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[dev-dependencies]
tempfile = "3.24.0"
pretty_assertions = "1.4"

[lib]
name = "uncomment"
path = "src/lib.rs"

[[bin]]
name = "uncomment"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required-features = ["bench-tools"]

[[bin]]
name = "profile"
path = "src/bin/profile.rs"
required-features = ["bench-tools"]
