[package]
name = "uncomment"
version = "3.0.2"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
description = "A CLI tool to remove comments from code using tree-sitter for accurate parsing"
edition = "2024"
keywords = ["comments", "cli", "tree-sitter", "ast"]
license = "MIT"
repository = "https://github.com/Goldziher/uncomment"

[lib]
name = "uncomment"
path = "src/lib.rs"

[[bin]]
name = "uncomment"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required-features = ["bench-tools"]

[[bin]]
name = "profile"
path = "src/bin/profile.rs"
required-features = ["bench-tools"]

[features]
default = []
bench-tools = []

[dependencies]
ahash = "0.8"
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
glob = "0.3.3"
ignore = "0.4.25"
memchr = "2"
num_cpus = "1.17"
once_cell = "1.21.4"
rayon = "1.12.0"
saphyr = "0.0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
tree-sitter = "0.26.8"
tree-sitter-language-pack = "1.7.0"
walkdir = "2.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.27.0"
